--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
-prophet==1.1.5
-pandas==2.1.4
-numpy==1.24.4
-pystan==2.19.1.1
-cmdstanpy==1.2.0 
+prophet>=1.1.5
+pandas>=2.2.0
+numpy>=1.26.0
+pystan>=3.8.0
+cmdstanpy>=1.2.0 
